--- a/src/main/webapp/resources/css/btn.css
+++ b/src/main/webapp/resources/css/btn.css
@@ -129,7 +129,7 @@ button[class*="btn"] {border: 0;}
 /* Colors for .btn and .btn-two */
 .btn.blue, .btn-two.blue     {background-color: #7fb1bf;}
 .btn.green, .btn-two.green   {background-color: #9abf7f;}
-.btn.red, .btn-two.red       {background-color: #fa5a5a;}
+.btn.red, .btn-two.red       {background-color: darkorange;}
 .btn.purple, .btn-two.purple {background-color: #cb99c5;}
 .btn.cyan, .btn-two.cyan     {background-color: #7fccde;}
 .btn.yellow, .btn-two.yellow {background-color: #f0d264;}
@@ -173,8 +173,8 @@ button[class*="btn"] {border: 0;}
 /* Button two - I have no creativity for names */
 .btn-two {
   color: white; 
-  padding: 15px 25px;
-  display: inline-block;
+  padding: 5px 20px;
+  /* display: inline-block; */
   border: 1px solid rgba(0,0,0,0.21);
   border-bottom-color: rgba(0,0,0,0.34);
   text-shadow:0 1px 0 rgba(0,0,0,0.15);
@@ -182,6 +182,7 @@ button[class*="btn"] {border: 0;}
               0 2px 0 -1px rgba(0,0,0,0.13), 
               0 3px 0 -1px rgba(0,0,0,0.08), 
               0 3px 13px -1px rgba(0,0,0,0.21);
+  font-size: small;
 }
 .btn-two:active {
   top: 1px;
@@ -202,7 +203,20 @@ button[class*="btn"] {border: 0;}
   transition: top .01s linear;
   text-shadow: 0 1px 0 rgba(0,0,0,0.15);
 }
-.btn-3d.red:hover    {background-color: #e74c3c;}
+
+.btn-3d_s {
+  position: relative;
+  display: inline-block;
+  font-size: 15px;
+  padding: 5px 20px;
+  color: white;
+  margin: 20px 10px 10px;
+  border-radius: 6px;
+  text-align: center;
+  transition: top .01s linear;
+  text-shadow: 0 1px 0 rgba(0,0,0,0.15);
+}
+.btn-3d_s.red:hover    {background-color: #ec9132;}
 .btn-3d.blue:hover   {background-color: #699DD1;}
 .btn-3d.green:hover  {background-color: #80C49D;}
 .btn-3d.purple:hover {background-color: #D19ECB;}
@@ -214,6 +228,7 @@ button[class*="btn"] {border: 0;}
 }
 
 /* 3D button colors */
+
 .btn-3d.red {
   background-color: #e74c3c;
   box-shadow: 0 0 0 1px #c63702 inset,
@@ -224,6 +239,20 @@ button[class*="btn"] {border: 0;}
 }
 .btn-3d.red:active {
   box-shadow: 0 0 0 1px #c63702 inset,
+        0 0 0 2px rgba(255,255,255,0.15) inset,
+        0 0 0 1px rgba(0,0,0,0.4);
+}
+
+.btn-3d_s.red {
+  background-color: darkorange;
+  box-shadow: 0 0 0 1px #f28018 inset,
+        0 0 0 2px rgba(255,255,255,0.15) inset,
+        0 8px 0 0 #dc8237,
+        0 8px 0 1px rgba(0,0,0,0.4),
+        0 8px 8px 1px rgba(0,0,0,0.5);
+}
+.btn-3d_s.red:active {
+  box-shadow: 0 0 0 1px #f28018 inset,
         0 0 0 2px rgba(255,255,255,0.15) inset,
         0 0 0 1px rgba(0,0,0,0.4);
 }
